@@ -111,6 +111,13 @@ class TestFormBuilder(TestCase):
             field_type='checkbox',
             required=True,
         )
+        FormField.objects.create(
+            page=self.form_page,
+            sort_order=1,
+            label="A Hidden Field",
+            field_type='hidden',
+            required=False,
+        )
 
         # Create a form builder
         self.fb = FormBuilder(self.form_page.get_form_fields())
@@ -135,6 +142,7 @@ class TestFormBuilder(TestCase):
         self.assertIn('your-favourite-python-ide', field_names)
         self.assertIn('your-choices', field_names)
         self.assertIn('i-agree-to-the-terms-of-use', field_names)
+        self.assertIn('a-hidden-field', field_names)
 
         # All fields have proper type
         self.assertIsInstance(form_class.base_fields['your-name'], forms.CharField)
@@ -149,8 +157,10 @@ class TestFormBuilder(TestCase):
         self.assertIsInstance(form_class.base_fields['your-favourite-python-ide'], forms.ChoiceField)
         self.assertIsInstance(form_class.base_fields['your-choices'], forms.MultipleChoiceField)
         self.assertIsInstance(form_class.base_fields['i-agree-to-the-terms-of-use'], forms.BooleanField)
+        self.assertIsInstance(form_class.base_fields['a-hidden-field'], forms.CharField)
 
         # Some fields have non-default widgets
         self.assertIsInstance(form_class.base_fields['your-message'].widget, forms.Textarea)
         self.assertIsInstance(form_class.base_fields['your-favourite-python-ide'].widget, forms.RadioSelect)
         self.assertIsInstance(form_class.base_fields['your-choices'].widget, forms.CheckboxSelectMultiple)
+        self.assertIsInstance(form_class.base_fields['a-hidden-field'].widget, forms.HiddenInput)
